------------------------------------------------------------------------ r1190605 | ingwa | 2010-10-28 10:55:13 +0200 (Thu, 28 Oct 2010) | 4 lines Changed paths:    M /trunk/koffice/plugins/vectorshape/libemf/EmfOutputPainterStrategy.cpp    M /trunk/koffice/plugins/vectorshape/libemf/EmfOutputPainterStrategy.h

Fix the output matrix calculations so that the EMF output works
wherever a shape is located.



------------------------------------------------------------------------
r1190622 | mlaurent | 2010-10-28 13:31:59 +0200 (Thu, 28 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/libs/pigment/KoColorSpaceRegistry.cpp

const ref

------------------------------------------------------------------------
r1190623 | mlaurent | 2010-10-28 13:34:29 +0200 (Thu, 28 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/libs/kopageapp/KoPAPixmapCache.cpp

const'ify

------------------------------------------------------------------------
r1190624 | mlaurent | 2010-10-28 13:38:59 +0200 (Thu, 28 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/plugins/commentshape/CommentShape.cpp

const'ify


------------------------------------------------------------------------
r1190626 | mlaurent | 2010-10-28 13:42:00 +0200 (Thu, 28 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/plugins/chartshape/CellRegion.cpp

const'ify


------------------------------------------------------------------------
r1190629 | mlaurent | 2010-10-28 13:43:55 +0200 (Thu, 28 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/plugins/reporting/chart/KoReportItemChart.cpp

const'ify


------------------------------------------------------------------------
r1190631 | lukast | 2010-10-28 13:44:28 +0200 (Thu, 28 Oct 2010) | 4 lines
Changed paths:
   M /trunk/koffice/krita/plugins/tools/defaulttools/kis_tool_brush.cc

This call is already done in KisTool::setupPainter in KisToolFreehand::initPaint

This was causing problems when I was setting attributes on painter->paintOp() in the tools.
PaintOp was deleted and fetched from the registry without any reason.

------------------------------------------------------------------------
r1190635 | mlaurent | 2010-10-28 13:47:01 +0200 (Thu, 28 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/kword/plugins/scripting/Module.cpp

const'ify


------------------------------------------------------------------------
r1190715 | berger | 2010-10-28 19:23:25 +0200 (Thu, 28 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/plugins/commentshape/CommentShapeFactory.cpp
   M /trunk/koffice/plugins/pluginshape/PluginShapeFactory.cpp

hide those two shapes from the "add shape" docker, since they are not useful for editing yet


------------------------------------------------------------------------
r1190719 | zachmann | 2010-10-28 19:34:09 +0200 (Thu, 28 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/kspread/Condition.cpp

Optimize: simplify hash function


------------------------------------------------------------------------
r1190723 | zachmann | 2010-10-28 20:00:30 +0200 (Thu, 28 Oct 2010) | 7 lines
Changed paths:
   M /trunk/koffice/libs/odf/KoXmlReader.cpp

Optimize KoXmlReader

Use the tag instead of the namespace in the hash function. This reduces the number
of compares quite a bit as there the data is better distributed.

Don't create prefix as it can't be null, only create localName when needed.


------------------------------------------------------------------------
r1190726 | mkruisselbrink | 2010-10-28 20:19:57 +0200 (Thu, 28 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/plugins/pathshapes/enhancedpath/EnhancedPathShape.cpp

don't crash when loading completely invalid and/or broken enhanced pathshapes (or just in general 0-width or 0-height shapes)
BUG: 255511

------------------------------------------------------------------------
r1190847 | zachmann | 2010-10-29 09:30:26 +0200 (Fri, 29 Oct 2010) | 6 lines
Changed paths:
   M /trunk/koffice/filters/kspread/excel/sidewinder/pole.cpp
   M /trunk/koffice/filters/kword/hancomword/pole.cpp
   M /trunk/koffice/filters/kword/starwriter/pole.cpp
   M /trunk/koffice/filters/libmso/pole.cpp
   M /trunk/koffice/filters/libmsooxml/pole.cpp

Optimize pole to don't use new/delete but a buffer on the stack.

That removes quite some new/delete calls.

Reviewed by Mek


------------------------------------------------------------------------
r1190849 | lukast | 2010-10-29 09:33:37 +0200 (Fri, 29 Oct 2010) | 2 lines
Changed paths:
   M /trunk/koffice/krita/image/brushengine/kis_paintop_settings.cpp

Remove duplicate include.
Fix warning with unused variables.
------------------------------------------------------------------------
r1190850 | lukast | 2010-10-29 09:33:44 +0200 (Fri, 29 Oct 2010) | 4 lines
Changed paths:
   M /trunk/koffice/krita/plugins/paintops/deform/kis_deform_paintop.cpp

Fix deform brush outline

Don't include in the current rotation and scale static
rotation and scale from the ui.


svn path=/branches/work/koffice-essen/; revision=1190857