plugins/commentshape/CommentShapeFactory.cpp
@@ -30,6 +30,7 @@ CommentShapeFactory::CommentShapeFactory()
 : KoShapeFactoryBase(COMMENTSHAPEID, i18n("Comment"))
 {
     setOdfElementNames(KoXmlNS::officeooo, QStringList("annotation"));
+    setHidden(true);
 }
 
 CommentShapeFactory::~CommentShapeFactory()
