plugins/pluginshape/PluginShapeFactory.cpp
@@ -39,6 +39,7 @@ PluginShapeFactory::PluginShapeFactory()
     //setIcon("video-x-generic");
     setOdfElementNames(KoXmlNS::draw, QStringList("plugin"));
     setLoadingPriority(9);
+    setHidden(true);
 }
 
 KoShape *PluginShapeFactory::createDefaultShape(KoResourceManager *documentResources) const
